Basic app version with sketches of functional UI and: Added Lookback, Ionic, Background "Video" and changed lots of icon/splash files.

--- a/client/stylesheets/util/variables.import.less
+++ b/client/stylesheets/util/variables.import.less
@@ -7,12 +7,13 @@
 @darker-orange: #FF9933;
 @dark-orange: #FFB366;
 @orange: #FFCC99;
-@soft-orange: #FFFCC;
+@soft-orange: #FFFFCC;
 @not-white: #FFF7EF;
 
 
 // Social Colors
 @color-twitter: #46c8f5;
+@color-facebook: #3b5998;
 
 // Alert
 @color-negative: #ff6622; //error, alert
