--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -1,19 +1,19 @@
 @import 'util/reset.import.less';
 
 // Mixins & Utilities
-/*@import 'util/helpers.import.less';*/
-/*@import 'util/lesshat.import.less';*/
-/*@import 'util/fontface.import.less';*/
-/*@import 'util/text.import.less';*/
-/*@import 'util/typography.import.less';*/
-/*@import 'util/variables.import.less';*/
+@import 'util/helpers.import.less';
+@import 'util/lesshat.import.less';
+@import 'util/fontface.import.less';
+@import 'util/text.import.less';
+@import 'util/typography.import.less';
+@import 'util/variables.import.less';
 
 /*// Global namespace*/
-/*@import 'globals/base.import.less';*/
-/*@import 'globals/button.import.less';*/
+@import 'globals/base.import.less';
+@import 'globals/button.import.less';
 /*@import 'globals/form.import.less';*/
 /*@import 'globals/icon.import.less';*/
-/*@import 'globals/layout.import.less';*/
+@import 'globals/layout.import.less';
 /*@import 'globals/link.import.less';*/
 /*@import 'globals/menu.import.less';*/
 /*@import 'globals/nav.import.less';*/
@@ -21,7 +21,7 @@
 
 
 /*// Global Templates*/
-/*@import 'globals/background.import.less';*/
+@import 'globals/background.import.less';
 /*@import 'globals/list-activities.import.less';*/
 /*@import 'globals/list-recipes.import.less';*/
 /*@import 'globals/list-title.import.less';*/
@@ -30,7 +30,9 @@
 /*@import 'globals/overlay.import.less';*/
 /*@import 'globals/welcome.import.less';*/
 
-/*// templates*/
+// templates
+@import '../templates/login/login.import.less';
+@import '../templates/carona/carona.import.less';
 /*@import '../templates/about.import.less';*/
 /*@import '../templates/bookmarks.import.less';*/
 /*@import '../templates/whats-cooking.import.less';*/
