--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -32,8 +32,7 @@
 
 // templates
 @import '../templates/login/login.import.less';
-@import '../templates/carona/carona.import.less';
-/*@import '../templates/about.import.less';*/
+@import '../templates/chat/chat.import.less';
 /*@import '../templates/bookmarks.import.less';*/
 /*@import '../templates/whats-cooking.import.less';*/
 /*@import '../templates/home.import.less';*/
