--- a/client/templates/layout/appLayout.jade
+++ b/client/templates/layout/appLayout.jade
@@ -13,6 +13,6 @@ template(name="appLayout")
       +ionTabs(style="ios")
         +ionTab(title="Histórico" path="recent" iconOff="ios-clock-outline"
           iconOn="ios-clock" class="tab-item-positive")
-        +ionTab(title="Carona" path="carona" iconOff="ios-bolt-outline" iconOn="ios-bolt" class="tab-item-positive")
+        +ionTab(title="Carona" path="chat" iconOff="ios-bolt-outline" iconOn="ios-bolt" class="tab-item-positive")
         +ionTab(title="Configurações" path="settings"
         iconOff="ios-gear-outline" iconOn="ios-gear" class="tab-item-positive")
