--- a/client/stylesheets/globals/background.import.less
+++ b/client/stylesheets/globals/background.import.less
@@ -10,7 +10,7 @@
     background-color: @dark-orange;
     .background-image(
       linear-gradient(top, rgba(0,0,0,.2) 0%, rgba(0,0,0,.2) 100%),
-      url('videos/Bigu-Bg.gif')
+      url('videos/Bigu-Bg-17-sub.gif')
     );
   }
 
