--- a/client/templates/chat/chat.jade
+++ b/client/templates/chat/chat.jade
@@ -1,13 +1,13 @@
 template(name="chat")
 
   +contentFor("headerTitle")
-    h1.title Carona
+    h1.title Chats!
 
   +ionView
     +ionContent
       +ionList
         each chats
-          +ionItem(path="chat.show" avatar="true" buttonRight="true" iconRight="true")
+          +ionItem(path="chat.show" class="chatItem" avatar="true" buttonRight="true" iconRight="true")
               img(src="#{avatarUrl}")
               h2 #{name.first} #{name.last}
               p #{topic} 
