Major rewrite of interface, first API drafts As performance was a big problem with meteoric-ionic fork, and we expect low profile hardware cellphones from our early-adopters, a framework-independent interface structure was redesigned, alongside with the very first internal API draft.
* Removal of lots of packages, including meteoric-ionic, which until now
was the base of anything related to interface.
* Animations/transitions perform optimization
* API draft and improvement on best practices/source health
* Other minor tweaks

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -1,4 +1,4 @@
-/*@import 'util/reset.import.less';*/
+@import 'util/reset.import.less';
 
 // Mixins & Utilities
 @import 'util/helpers.import.less';
@@ -11,9 +11,9 @@
 /*// Global namespace*/
 @import 'globals/base.import.less';
 @import 'globals/button.import.less';
-/*@import 'globals/form.import.less';*/
-/*@import 'globals/icon.import.less';*/
 @import 'globals/layout.import.less';
+/*@import 'globals/form.import.less';*/
+@import 'globals/icon.import.less';
 /*@import 'globals/link.import.less';*/
 /*@import 'globals/menu.import.less';*/
 /*@import 'globals/nav.import.less';*/
