--- a/client/stylesheets/globals/layout.import.less
+++ b/client/stylesheets/globals/layout.import.less
@@ -32,7 +32,7 @@ body {
 
 .content-scrollable {
   .position(absolute, 0, 0, 0, 0);
-  background: @color-empty;
+  /*background: @color-empty;*/
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
