--- a/client/templates/chat/chat.import.less
+++ b/client/templates/chat/chat.import.less
@@ -1,195 +1,2 @@
-.chatItem {
-  background: linear-gradient(to bottom right, rgba(211, 131, 18, 0.3),
-  rgba(168, 50, 121, 0.3));
-  border:0;
-  h2 {
-    color: #FFF;
-  }
-}
-
-.animated {
-  .animation-duration(1s);
-  .animation-fill-mode(both);
-}
-
-.animated.infinite {
-  .animation-iteration-count(infinite);
-}
-
-.animated.hinge {
-  .animation-duration(2s);
-}
-
-@-webkit-keyframes pulse {
-  0% {
-    .scale3d(0.93, 0.93, 0.93);
-    .opacity(0.5);
-  }
-
-  100% {
-    .scale3d(1, 1, 1);
-    .opacity(1);
-  }
-}
-
-@keyframes pulse {
-  0% {
-    .scale3d(0.93, 0.93, 0.93);
-    .opacity(0.5);
-  }
-
-  100% {
-    .scale3d(1, 1, 1);
-    .opacity(1);
-  }
-}
-
-.pulse {
-  .animation-name(pulse);
-}
-
-.view {
-  &::before {
-   content: '';
-   height: 100%;
-   width: 100%;
-   position: absolute;
-   /*top: 0;*/
-   /*left: 0;*/
-   z-index: -9999999999999;
-   /*overflow: hidden;*/
-   /*background: linear-gradient(to bottom right, rgba(211, 131, 18, 0.85),*/
-   /*rgba(168, 50, 121, 0.85)),*/
-   /*url('https://scontent-a-fra.xx.fbcdn.net/hphotos-ash2/t31.0-8/459720_642901589060638_2035169384_o.jpg');*/
-   background: linear-gradient(to bottom right, rgba(41, 36, 132, 0.85),
-   rgba(102, 245, 201, 0.85)),
-   url('https://scontent-a-fra.xx.fbcdn.net/hphotos-ash2/t31.0-8/459720_642901589060638_2035169384_o.jpg');
-   background-size: cover;
-   /*background-position: center;*/
-   /*background-attachment: fixed;*/
-  }
-}
-
-.messages {
-  img.avatar.animate, .msg .bubble.animate {
-      /*.animation-delay(0.3);*/
-      .animated();
-      .pulse();
-  }
-
-  @grey: #e5e5ea;
-  @blue: lighten(#1289fe, 20%);
-
-  .display(flex);
-  .align-content(center);
-  .align-items(center);
-  margin-bottom: 20px;
-
-
-  img.avatar {
-    display: none;
-    order: 1;
-    margin: 19px 5px 0 0;
-    height: 2rem;
-    width: 2rem;
-    box-sizing: border-box;
-    -webkit-touch-callout: none;
-    .user-select(none);
-    .align-self(flex-start);
-    background-position: center;
-    background-size: cover;
-
-    box-shadow: 0 1px 1px rgba(0,0,0,0.3);
-    border-radius: 50%;
-    border: 1px solid #DFF;
-
-    /*background: url('/img/app/bigu-logo.png');*/
-    &.loaded {
-      display: block;
-    }
-  }
-
-
-  .msg {
-    order: 2;
-    .flex(1 1 auto);
-    padding: 10px;
-    overflow: hidden;
-    text-align: left;
-
-    -webkit-touch-callout: default;
-    .user-select(text);
-
-    .bubble {
-      -webkit-font-smoothing: subpixel-antialiased;
-      font-size: 1rem;
-      color: #FFF;
-      background-color: @blue;
-      display: inline-block;
-      padding: 10px;
-      border-radius: 10px;
-      text-align: left;
-      max-width: 240px;
-
-      .time {
-        color: rgba(240, 240, 240, 0.7);
-        font-size: .6rem;
-        padding: 0 5px;
-        white-space: nowrap;
-      }
-
-
-      &::before {
-        .display(flex);
-        .align-self(center);
-        position: relative;
-        float: left;
-        content: '';
-        margin: 7px 0 0 -17px;
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 8px 8px 8px 0;
-        border-color: transparent @blue transparent
-      }
-
-    }
-  }
-
-  &.received {
-
-    img {
-      order: 3;
-      margin: 19px 0 0 5px;
-    }
-
-
-    .msg {
-      order: 2;
-      text-align: right;
-
-      .bubble {
-        color: #000;
-        background-color: @grey;
-
-        .time {
-          color: rgba(10, 10, 10, 0.5);
-        }
-
-        &::before {
-          position: relative;
-          float: right;
-          content: '';
-          margin: 7px -17px 0 0;
-          width: 0;
-          height: 0;
-          border-style: solid;
-          border-width: 8px 0 8px 8px;
-          border-color: transparent transparent transparent @grey;
-        }
-
-      }
-    }
-  }
-
-}
+@import 'chatRoom/chatRoom.import.less';
+@import 'chatList/chatList.import.less';
