--- a/client/stylesheets/globals/background.import.less
+++ b/client/stylesheets/globals/background.import.less
@@ -7,7 +7,7 @@
   position: relative;
 
   &[class*="login"] {
-    background-color: @dark-orange;
+    background-color: @orange;
     .background-image(
       linear-gradient(top, rgba(0,0,0,.2) 0%, rgba(0,0,0,.2) 100%),
       url('img/app/bg-login-640x540.jpg')
