--- a/client/stylesheets/util/variables.import.less
+++ b/client/stylesheets/util/variables.import.less
@@ -1,14 +1,12 @@
 // Core
-@color-primary: @dark-orange; // blood orange
-@color-secondary: @not-white; //
-@color-tertiary: @orange; //
-@color-complementary: @soft-orange; //
+@black: #000;
+@white: #FFF;
 
-@darker-orange: #FF9933;
-@dark-orange: #FFB366;
-@orange: #FFCC99;
-@soft-orange: #FFFFCC;
-@not-white: #FFF7EF;
+@orange: #ED6821;
+@pink: #FC8C97;
+@not-white: #F0F0F0;
+@grey: #C9C9C9;
+@not-black: #303030;
 
 // Social Colors
 @color-twitter: #46c8f5;
