--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -32,7 +32,7 @@
 
 // templates
 @import '../templates/login/login.import.less';
-@import '../templates/chat/chat.import.less';
+@import '../templates/chatAndRide/chatAndRide.import.less';
 /*@import '../templates/bookmarks.import.less';*/
 /*@import '../templates/whats-cooking.import.less';*/
 /*@import '../templates/home.import.less';*/
