--- a/client/templates/chatAndRide/chatList/chatList.import.less
+++ b/client/templates/chatAndRide/chatList/chatList.import.less
@@ -24,7 +24,7 @@
        .align-items(center);
        min-height: 3.5rem;
        width: 100%;
-       box-shadow: 0 1px 2px 0px rgba(0,0,0,0.5);
+       box-shadow: 0 1px 2px 0px fade(@black, 50%);
        background: #FFF;
        padding: .8em;
        color: #000;
@@ -43,7 +43,7 @@
          background-size: cover;
          margin: 0 .5em 0 0;
 
-         box-shadow: 0 1px 1px rgba(0,0,0,0.3);
+         box-shadow: 0 1px 1px fade(@black, 30%);
          border-radius: 50%;
          border: 1px solid #DFF;
        }
