--- a/client/templates/chatAndRide/chatAndRide.jade
+++ b/client/templates/chatAndRide/chatAndRide.jade
@@ -8,6 +8,7 @@ template(name="chatAndRide")
 
 template(name="topBar")
   .topBar
+    span.js-back.icon-arrow-left
     h1 3 amigos indo para UFRJ
     button.toggleChat.tcon.tcon-grid.tcon-grid--rearrange(type="button" aria-label="Toggle Chat")
       span.tcon-grid__item(aria-hidden="true")
