--- a/client/templates/login/login.jade
+++ b/client/templates/login/login.jade
@@ -1,12 +1,12 @@
 template(name="login")
-  //-.page.login 
-    //-video(autoplay, loop, poster, webkit-playsinline)
+  .page.login 
+    video(autoplay, loop, poster="/img/app/bg-login-clouds.png", webkit-playsinline)
       //-source(src="videos/Traffic_and_Clouds_Videvo.webm", type="video/webm")
-      //-source(src="videos/Traffic_and_Clouds_Videvo.mp4", type="video/mp4")
-    //-h1 bigu
-      //-p Carona, universitária!
-    //-button.btn-facebook Logar com Facebook 
-  .page.bg-image.login
+      source(src="//s3.biguapp.co/Traffic_and_Clouds_Videvo.mp4", type="video/mp4")
     h1 bigu
       p Carona, universitária!
-    button.button.button-full.btn-facebook Logar com Facebook 
+    button.btn-facebook Logar com Facebook 
+  //-.page.bg-image.login
+    //-h1 bigu
+      //-p Carona, universitária!
+    //-button.button.button-full.btn-facebook Logar com Facebook 
