--- a/client/stylesheets/globals/icon.import.less
+++ b/client/stylesheets/globals/icon.import.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:url('font/icons/icomoon.eot?-stwyp9');
-  src:url('font/icons/icomoon.eot?#iefix-stwyp9') format('embedded-opentype'),
-    url('font/icons/icomoon.woff?-stwyp9') format('woff'),
-    url('font/icons/icomoon.ttf?-stwyp9') format('truetype'),
-    url('font/icons/icomoon.svg?-stwyp9#icomoon') format('svg');
+  src:url('font/icons/icomoon.eot?-stwyp8');
+  src:url('font/icons/icomoon.eot?#iefix-stwyp8') format('embedded-opentype'),
+    url('font/icons/icomoon.woff?-stwyp8') format('woff'),
+    url('font/icons/icomoon.ttf?-stwyp8') format('truetype'),
+    url('font/icons/icomoon.svg?-stwyp8#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -23,14 +23,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-chat:before {
+.icon-arrow-left:before {
   content: "\e600";
 }
-
-.icon-location:before {
-  content: "\e601";
-}
-
 .icon-facebook:before {
-  content: "\f09a";
+  content: "\ea8c";
 }
